--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "archiver": "^7.0.1",
+    "better-queue": "^3.8.12",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
