--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "p-limit": "^6.2.0"
+    "p-limit": "^6.2.0",
+    "transliteration": "^2.3.5"
   }
 }
